force-app/main/default/objects/lap__c/fields/Circuit__c.field-meta.xml
<CustomField>
    <fullName>Circuit__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Circuit</label>
    <referenceTo>circuit__c</referenceTo>
    <relationshipLabel>Laps</relationshipLabel>
    <relationshipName>Laps</relationshipName>
    <type>Lookup</type>
</CustomField>