force-app/main/default/objects/lap__c/fields/Driver__c.field-meta.xml
<CustomField>
    <fullName>Driver__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Driver</label>
    <referenceTo>driver__c</referenceTo>
    <relationshipLabel>Laps</relationshipLabel>
    <relationshipName>Laps</relationshipName>
    <type>Lookup</type>
</CustomField>