force-app/main/default/objects/lap__c/fields/lap_id__c.field-meta.xml
<CustomField>
    <fullName>lap_id__c</fullName>
    <externalId>true</externalId>
    <label>lap id</label>
    <length>50</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>