force-app/main/default/objects/lap__c/fields/Location__c.field-meta.xml
<CustomField>
    <fullName>Location__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Location</label>
    <referenceTo>Location</referenceTo>
    <relationshipLabel>Laps</relationshipLabel>
    <relationshipName>Laps</relationshipName>
    <type>Lookup</type>
</CustomField>