force-app/main/default/objects/lap__c/fields/Race__c.field-meta.xml
<CustomField>
    <fullName>Race__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Race</label>
    <referenceTo>race__c</referenceTo>
    <relationshipLabel>Laps</relationshipLabel>
    <relationshipName>Laps</relationshipName>
    <type>Lookup</type>
</CustomField>